# GolangEx

./: .gitignore  README.md  go.mod  go.sum  logger.go
bazel/: Makefile
bazel/DbDir/: go.mod  main.go
bazel/DbDir/Models/: tables.go
bazel/DbDir/database/: database.go  db.go
bazel/GreeterService/: BUILD  Greeter.proto  go.mod  main.go
bazel/GreeterService/client/: main.go
bazel/GreeterService/server/: gRPC_server.go
bazel/GreeterServiceImp/: go.mod  main.go
bazel/GreeterServiceImp/client/: main.go
bazel/GreeterServiceImp/server/: gRPC_server.go
bazel/TestService/: BUILD.bazel  go.mod  go.sum  main.go  test.proto
bazel/TestService/data/: products.go
bazel/TestService/handlers/: goodBye.go  hello.go  products.go
concurrency/: go.mod  main.go
concurrency/util/: util.go
html-link-parser/: main.go
quiz/: main.go  problems.csv
