load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")


load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

#pb file
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

#proto compiler
load("@rules_proto//proto:defs.bzl", "proto_library")


package(default_visibility = ["//visibility:public"])

# Proto definitions
proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
)




go_proto_library(
    name = "test_go_proto",

    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "Go/bazel/TestService/Gen/GoTestSrv",

    protos = [":test_proto",],
)





#cc_proto_library(
#    name = "maps_vector_store_cc_proto",
#    deps = [":maps_vector_store_proto"],
#)

#cc_grpc_library(
#    name = "maps_vector_store_cc_grpc",
#    srcs = [":maps_vector_store.proto"],
#    grpc_only = True,
#    deps = [":maps_vector_store_cc_proto"],
#)








#java_proto_library(
#    name = "maps_vector_store_java_proto",
#    deps = [":maps_vector_store_proto"],
#)

#java_grpc_library(
#    name = "maps_vector_store_java_grpc",
#    srcs = [":maps_vector_store_proto"],
#    deps = [":maps_vector_store_java_proto"],
#)







# adding pythong support
#py_proto_library(
#    name = "maps_vector_store_py_proto",
#    deps = [":maps_vector_store_proto", ],
#    deps = [
#         "//Common:common_enums_proto",
#         "//Common:headers_proto",
#         "//Common:utils_proto",
#         "//Common:entities_proto",
#         "//Common:geo_common_proto",
#         "//Common:geo_enums_proto",
#         "//Common:time_slot_proto",
#         "@com_google_protobuf//:duration_proto",
#         "@com_google_protobuf//:timestamp_proto",
#    ],

#)
#
#py_grpc_library(
#    name = "maps_vector_store_py_grpc",
#    srcs = [":maps_vector_store_proto", ],
#    deps = [":maps_vector_store_py_proto"],
#)